// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EchelonChimie /> should render 1`] = `
.c2 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c5 {
  position: absolute;
  top: 1.6rem;
  right: 1.6rem;
  width: 1.6rem;
  height: 1.6rem;
  color: #f66663;
  pointer-events: none;
}

.c4 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem 0;
  padding-right: 5rem;
  color: #3e486e;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  vertical-align: middle;
  background-color: #fff;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  cursor: pointer;
  -webkit-transition: border-color 250ms ease;
  transition: border-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4::-ms-expand {
  background-color: transparent;
  border: 0 transparent;
}

.c4 *::-ms-backdrop,
.c4 {
  padding-right: 1.6rem;
}

.c4:invalid {
  border-color: #eb5757;
}

.c4:disabled {
  background-color: #e4e8ef;
}

.c0 {
  display: block;
  margin-top: 1rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  font-weight: 600;
  cursor: pointer;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
}

.c3 {
  width: 100%;
}

@media (max-width:600px) {
  .c2 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.6rem;
  }
}

<div>
  <label
    class="c0"
  >
    Quel est l’échelon du salarié ?
    <br />
    Cette information se trouve sur le bulletin de salaire.
  </label>
  <label
    class="c1"
    for="echelon"
  >
    Sélectionnez un échelon
  </label>
  <div
    class="c2 c3"
  >
    <select
      class="c4"
      id="echelon"
      name="echelon"
    >
      <option
        disabled=""
        value=""
      />
      <option
        value="130"
      >
        130
      </option>
      <option
        value="140"
      >
        140
      </option>
      <option
        value="150"
      >
        150
      </option>
      <option
        value="160"
      >
        160
      </option>
      <option
        value="175"
      >
        175
      </option>
      <option
        value="190"
      >
        190
      </option>
      <option
        value="205"
      >
        205
      </option>
      <option
        value="225"
      >
        225
      </option>
      <option
        value="235"
      >
        235
      </option>
      <option
        value="250"
      >
        250
      </option>
      <option
        value="275"
      >
        275
      </option>
      <option
        value="300"
      >
        300
      </option>
      <option
        value="325"
      >
        325
      </option>
      <option
        value="350"
      >
        350
      </option>
      <option
        value="360"
      >
        360
      </option>
      <option
        value="400"
      >
        400
      </option>
      <option
        value="460"
      >
        460
      </option>
      <option
        value="480"
      >
        480
      </option>
      <option
        value="510"
      >
        510
      </option>
      <option
        value="550"
      >
        550
      </option>
      <option
        value="660"
      >
        660
      </option>
      <option
        value="770"
      >
        770
      </option>
      <option
        value="880"
      >
        880
      </option>
    </select>
    <div
      aria-hidden="true"
      class="c5"
    >
      <svg
        aria-hidden="true"
        fill="none"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          clip-path="url(#arrow-down_svg__a)"
        >
          <path
            d="m8.425 11.573 7.11-6.072a.709.709 0 0 0 .26-.537.709.709 0 0 0-.26-.537.973.973 0 0 0-.629-.223.973.973 0 0 0-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 0 0-.63-.223.973.973 0 0 0-.628.223.708.708 0 0 0-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 0 0 .29.165 1.021 1.021 0 0 0 .68 0 .91.91 0 0 0 .29-.165z"
            fill="currentColor"
          />
        </g>
        <defs>
          <clippath
            id="arrow-down_svg__a"
          >
            <path
              d="M0 0h16v16H0z"
              fill="currentColor"
            />
          </clippath>
        </defs>
      </svg>
    </div>
  </div>
</div>
`;

exports[`<EchelonChimie /> should render the selected echelon 1`] = `
.c2 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c5 {
  position: absolute;
  top: 1.6rem;
  right: 1.6rem;
  width: 1.6rem;
  height: 1.6rem;
  color: #f66663;
  pointer-events: none;
}

.c4 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem 0;
  padding-right: 5rem;
  color: #3e486e;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  vertical-align: middle;
  background-color: #fff;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  cursor: pointer;
  -webkit-transition: border-color 250ms ease;
  transition: border-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4::-ms-expand {
  background-color: transparent;
  border: 0 transparent;
}

.c4 *::-ms-backdrop,
.c4 {
  padding-right: 1.6rem;
}

.c4:invalid {
  border-color: #eb5757;
}

.c4:disabled {
  background-color: #e4e8ef;
}

.c0 {
  display: block;
  margin-top: 1rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  font-weight: 600;
  cursor: pointer;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
}

.c3 {
  width: 100%;
}

@media (max-width:600px) {
  .c2 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.6rem;
  }
}

<div>
  <label
    class="c0"
  >
    Quel est l’échelon du salarié ?
    <br />
    Cette information se trouve sur le bulletin de salaire.
  </label>
  <label
    class="c1"
    for="echelon"
  >
    Sélectionnez un échelon
  </label>
  <div
    class="c2 c3"
  >
    <select
      class="c4"
      id="echelon"
      name="echelon"
    >
      <option
        disabled=""
        value=""
      />
      <option
        value="130"
      >
        130
      </option>
      <option
        value="140"
      >
        140
      </option>
      <option
        value="150"
      >
        150
      </option>
      <option
        value="160"
      >
        160
      </option>
      <option
        value="175"
      >
        175
      </option>
      <option
        value="190"
      >
        190
      </option>
      <option
        value="205"
      >
        205
      </option>
      <option
        value="225"
      >
        225
      </option>
      <option
        value="235"
      >
        235
      </option>
      <option
        value="250"
      >
        250
      </option>
      <option
        value="275"
      >
        275
      </option>
      <option
        value="300"
      >
        300
      </option>
      <option
        value="325"
      >
        325
      </option>
      <option
        value="350"
      >
        350
      </option>
      <option
        value="360"
      >
        360
      </option>
      <option
        value="400"
      >
        400
      </option>
      <option
        value="460"
      >
        460
      </option>
      <option
        value="480"
      >
        480
      </option>
      <option
        value="510"
      >
        510
      </option>
      <option
        value="550"
      >
        550
      </option>
      <option
        value="660"
      >
        660
      </option>
      <option
        value="770"
      >
        770
      </option>
      <option
        value="880"
      >
        880
      </option>
    </select>
    <div
      aria-hidden="true"
      class="c5"
    >
      <svg
        aria-hidden="true"
        fill="none"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          clip-path="url(#arrow-down_svg__a)"
        >
          <path
            d="m8.425 11.573 7.11-6.072a.709.709 0 0 0 .26-.537.709.709 0 0 0-.26-.537.973.973 0 0 0-.629-.223.973.973 0 0 0-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 0 0-.63-.223.973.973 0 0 0-.628.223.708.708 0 0 0-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 0 0 .29.165 1.021 1.021 0 0 0 .68 0 .91.91 0 0 0 .29-.165z"
            fill="currentColor"
          />
        </g>
        <defs>
          <clippath
            id="arrow-down_svg__a"
          >
            <path
              d="M0 0h16v16H0z"
              fill="currentColor"
            />
          </clippath>
        </defs>
      </svg>
    </div>
  </div>
  <ul>
    <li>
      Emploi impliquant l’exécution de travaux ne demandant qu’une mise au courant sommaire.
    </li>
  </ul>
</div>
`;
